--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 192.168.0.111",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
